--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
+    height: 100vh;
+}
+
 #gameCanvas{
-    background-color: gray;
+    background-color: rgb(24, 24, 24);
 }
