--- a/style.css
+++ b/style.css
@@ -14,5 +14,12 @@
 }
 
 #gameCanvas{
+    position: absolute;
+    top: 0;
+    left: 0;
     background-color: rgb(24, 24, 24);
+}
+
+#assets{
+    display: none;
 }
