--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    overflow: hidden;
 
+}
 .main{
     display: flex;
     justify-content: center;
@@ -18,6 +21,7 @@
     top: 0;
     left: 0;
     background-color: rgb(24, 24, 24);
+    overflow: hidden;
 }
 
 #assets{
